# local-codex

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: agent.rs  config.rs  llm.rs  main.rs  tools.rs
src/local_codex/: __main__.py  agent.py  cli.py  config.py  tools.py
src/local_codex/llm/: __init__.py  base.py  http.py  ollama.py  openai_compat.py
tests/: agent_test.rs  test_agent.py  test_tools.py  tools_test.rs
