[package]
name = "local-codex"
version = "0.2.0"
edition = "2021"
description = "Local open-source coding orchestrator for local LLMs"
license = "MIT"

[[bin]]
name = "local-codex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3.13"
