[package]
name = "local-cli"
version = "0.2.0"
edition = "2021"
description = "Local open-source coding orchestrator CLI for local LLMs"
license = "MIT"

[[bin]]
name = "local-cli"
path = "src/main.rs"

[lib]
name = "local_codex"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3.13"
